--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -15,7 +15,7 @@ const projects = (await getCollection('work')).sort(
 
 <BaseLayout
 	title="My Work | Marie Doaré"
-	description="Learn about Marie Doaré's most recent projects"
+	description="Learn about Marie Doaré's most recent work"
 >
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
