--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,6 +16,7 @@ const currentYear = new Date().getFullYear();
 		<a href="https://github.com/me"> GitHub</a>
 		<a href="https://codepen.io/me"> CodePen</a> -->
 	</p>
+	<button id="button" onclick="window.print()"> Imprimer</button>
 </footer>
 <style>
 	footer {
@@ -69,6 +70,20 @@ const currentYear = new Date().getFullYear();
 
 		.socials {
 			justify-content: flex-end;
+		}
+
+		footer #button {
+		display: flex;
+		flex-direction: column;
+		/*align-items: center; */
+		gap: 3rem;
+		border-top: 1px solid var(--gray-800);
+		border-bottom: 1px solid var(--gray-800);
+		border-radius: 50px;
+		padding: 1rem 1rem;
+		background-color: var(--gray-999_40); 
+		color:  #8490B5;
+		box-shadow: var(--shadow-sm);
 		}
 	}
 </style>
