change mail adress

--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -5,7 +5,7 @@ import Icon from './Icon.astro';
 
 <aside>
 	<h2>Envie de travailler avec moi?</h2>
-	<CallToAction href="mailto:marie.doare.bzh@gmail.com">
+	<CallToAction href="mailto:marie.doare@proton.me">
 		Ecrivez-moi !
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
