modification page a propos

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -7,7 +7,7 @@ interface Props {
 }
 
 const {
-	title = 'Marie Doaré, sage-femme en immersion dans le monde du dev',
+	title = 'Marie Doaré, sage-femme en reconversion dans le monde du dev',
 	description = 'Portfolio de Marie Doaré, apprenante dev full-stack à AdaTechSchool.',
 } = Astro.props;
 ---
