--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,22 +24,30 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Savoir vivre</h2>
 				<div class="content">
 					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
+						En recherche d'une alternance dans la tech,n'hésitez pas à me contacter pour échanger sur d'éventuelles opportunités de collaboration ou simplement pour discuter de nos expériences respectives !
+					</p>
+					<p> Passionnée par les défis et les opportunités d'apprentissage continu,j'ai tracé un parcours professionnel dans la santé aussi varié que passionnant. </p>
+					<p> Je suis une femme dynamique et pétillante, j'ai débuté ma carrière en tant que sage-femme hospitalière puis en tant que sage-femme libérale, offrant mes compétences et mon soutien aux futures mamans avec empathie. </p> 
+						
+						<p>Cependant, mon désir d'explorer de nouveaux horizons m'a conduite vers un chemin inattendu.</p>
+					<p></p>
+					<p>Intriguée par les possibilités offertes par la technologie,j'ai décidé de me reconvertir. 
+						<p>J'ai rejoins AdatechSchool avec passion, plongeant dans l'apprentissage du développement web.</p>
+					</p>
+					<p> </p>
+					<p> Cette transition vers le monde du développement web est le fruit d'une passion 
+						des nouvelles technologies longtemps nourrie en parallèle de mes responsabilités précédentes.  </p>
+					<p>
+						Mon parcours m'a permis d'acquérir des compétences précieuses 
+						en gestion de crise (urgences, covid), en communication digitale (logiciel patient,
+						téleconsultation etc) et en management d'équipe (communication non violente), 
+						des atouts que je compte bien mettre à profit dans mon nouveau rôle.
 					</p>
 					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
+						Aujourd'hui, je suis une développeuse en devenir, combinant mon expérience en santé 
+						avec ma maîtrise de la technologie pour créer des solutions innovantes et conviviales. 
+						Toujours prête à m'adapter, je suis animée par une passion contagieuse pour la Tech, 
+						prouvant que chaque parcours peut être une source d'inspiration pour le suivant.
 					</p>
 				</div>
 			</section>
@@ -53,6 +61,7 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Savoir être</h2>
 				<div class="content">
 					<p>innovante, curieuse, rigoureuse, dynamique</p>
+
 				</div>
 			</section>
 		</main>
