--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -6,12 +6,12 @@ import Icon from './Icon.astro';
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2>De sage-femme à développeuse</h2>
-		<p>J'adore prendre soin de l'autre, des femmes particulièrement et par dessus tout que le soin soit accessible au plus grand nombre. L'innovation au sein de la FemTech me passionne depuis une dizaine d'années. Apprenante à AdaTechSchool.</p>
+		<p>J'adore prendre soin de l'autre, des femmes particulièrement. L'innovation au sein de la FemTech me passionne depuis une dizaine d'années.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
 		<h2> FemTech Leader & team player</h2>
-		<p> Favorise la place des femmes au sein de la société. Forte de propositions. Aime travailler en pair programming, conseiller et partager sont des valeurs qui me tiennent à coeur.</p>
+		<p> Favorise la place des femmes au sein de la société. Forte de propositions. Aime travailler en pair-programming, conseiller et partager sont des valeurs qui me tiennent à coeur.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
