--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -12,8 +12,8 @@ const textLinks: { label: string; href: string }[] = [
 
 /** Icon links to social media — edit these with links to your profiles! */
 const iconLinks: { label: string; href: string; icon: keyof typeof iconPaths }[] = [
-	{ label: 'GitHub', href: 'https://github.com/MarieDoare-EmmaWatson', icon: 'github-logo' },
-	{ label: 'LinkedIn', href: 'https://linkedin.com/in/marie-d-520406188', icon: 'dribbble-logo'},
+	{ label: 'GitHub', href: 'https://github.com/MarieDOARE', icon: 'github-logo' },
+	{ label: 'LinkedIn', href: 'https://linkedin.com/in/marie-doaré', icon: 'dribbble-logo'},
 	{ label: 'FemTech', href: 'https://www.femtechfrance.org/lassociation', icon: 'discord-logo'},
 	// { label: 'dribbble', href: 'https://dribbble.com/me', icon: 'dribbble-logo' },
 	// { label: 'YouTube', href: 'https://www.youtube.com/@me/', icon: 'youtube-logo' },
